--- a/html/tables.html
+++ b/html/tables.html
@@ -4,7 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS PRACTICE</title>
-    <link rel="stylesheet" href="tables.css">
+    <style>
+
+            #table {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+        td, th {
+            border: 1px solid;
+        }
+        table {
+            margin-bottom: 30px;
+            border-collapse: collapse;
+        }
+        td,th {
+            
+            padding: 10px;
+        }
+        #table-notes {
+            display: flex;
+            justify-content: space-between;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
+        #table-notes div {
+            flex: 1;
+        }
+        #table3 tbody {
+            font-size: 95%;
+            font-style: italic;
+        }
+        #table3 tfoot {
+            font-weight: bold;
+        }
+
+        #table4 {
+            text-align: center;
+        }
+
+        #table4 thead .planet-name {
+            border-right: 3px solid black;
+            border-left: 3px solid black;
+            border-top:  3px solid black;
+        }
+        #table4 tbody .planet-name {
+            border-left: 3px solid black;
+            border-right:  3px solid black;
+        }
+        #table4 tfoot .planet-name {
+            border-right: 3px solid black;
+            border-left: 3px solid black;
+            border-bottom: 3px solid black;
+        }
+    </style>
 </head>
 <body>
     <!-- Table Notes -->
