--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h2>CSS</h1>
             <ul>
                 <li><a href="css/units.html">Units</a></li>
+                <li><a href="css/textstyles.html">Text styles</a></li>
             </ul>
     </div>
     <div>
