--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS/JAVASCRIPT PRACTICE</title>
-    <link rel="stylesheet" href="index.css">
+    <style>
+        #head{
+            width: 100%;
+            text-align: center;
+            font-size: 40px;
+        }
+    </style>
 </head>
 <body>
     <div id="head">CHEAT SHEET</div>
